makefile partie louis + matt

--- a/quai/makefile
+++ b/quai/makefile
@@ -1,5 +1,3 @@
-mainquai : mainquai.o menuquai.o quai.o
-	gcc -o mainquai mainquai.o menuquai.o quai.o
 
 mainquai.o : mainquai.c
 	gcc -g -Wall -c mainquai.c
@@ -9,6 +7,13 @@ menuquai.o : menuquai.c
 
 quai.o : quai.c
 	gcc -g -Wall -c quai.c
+
+bateau.o : bateau.c
+	gcc -g -Wall -c bateau.c
+
+mainquai : mainquai.o menuquai.o quai.o bateau.o
+	gcc -o mainquai mainquai.o menuquai.o quai.o bateau.o
+
 
 clean :
 	rm mainquai *.o
